[package]
name = "etcherus"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = "0.12"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
walkdir = "2"
dialoguer = "0.11"
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
bytesize = "1.3"
chrono = "0.4"
regex = "1.10"
glob = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
# No libusb - use system commands instead

[target.'cfg(target_os = "linux")'.dependencies]
# No libusb - use system commands instead

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winbase", "fileapi"] }
